Bug 30442 - optional statement probes still throw exceptions that kill pass-2
Summary: optional statement probes still throw exceptions that kill pass-2
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-11 21:50 UTC by Frank Ch. Eigler
Modified: 2023-07-26 08:21 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2023-05-11 21:50:09 UTC
% stap -p2 -e 'probe oneshot {log("hi")} probe kernel.statement("do_exit@*:8332")? { log("yo") }'
semantic error: no line records for kernel/exit.c:8332 [man error::dwarf]

This hits if the statement probes -partly- resolve, but then fail, such as if
the line number range is a little off but the function name is valid.
Comment 1 Frank Ch. Eigler 2023-05-12 15:18:44 UTC
commit ab0c5c25509600b7c9cecc9e10baebc984082b50
gpg: Signature made Fri 12 May 2023 11:18:18 AM EDT
gpg:                using RSA key 5D38116FA4D3A7CC77E378D37E83610126DCC2E8
gpg: Good signature from "Frank Ch. Eigler <fche@elastic.org>" [ultimate]
Author: Frank Ch. Eigler <fche@redhat.com>
Date:   Fri May 12 11:13:45 2023 -0400

    PR30442: failing optional statement probes should not trigger pass2 exceptions
Comment 2 Martin Cermak 2023-05-12 20:58:25 UTC
Looks great, seems to work!  Thanks for looking into this.  Full regression tests running...
Comment 3 Martin Cermak 2023-07-26 08:21:52 UTC
Verified, thanks for fixing!